@@ -4,6 +4,7 @@ xxxx-xx-xx: Revelation 0.4.5
 New features:
 - added Password Safe 2.x import/export
 - added Password Safe 1.x import/export
+- added GPass 0.5.x import
 - added MyPasswordSafe import/export
 - added Password Gorilla import/export
 
@@ -11,14 +12,14 @@ Bugfixes:
 - fix crash when searching with non-Unicode locale
 - fix crashes in applet and with drag/drop on 64-bit systems
 - encode data as Unicode when loading from files
+- more informative error messages for gnomemisc module
 - fix incorrect magic string in MIME-type entry
 - set correct app version number in datafile header
 - default lock timeout for applet set to 10 minutes
-- don't use unnecessary defsfiles when building gnomemisc module
-- more informative error messages for gnomemisc module
 
 Code changes:
 - check for necessary python modules at configure-time
+- don't use unnecessary defsfiles when building gnomemisc module
 - improved the applet name and description
 
 
